# cnn-car-clasification-api

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/routers/: health.py  predict.py  predict_hier.py
app/schemas/: predict.py
app/services/: classifier.py  hier_classifier.py
